src/objects/FieloCMS__Section__c.object
<CustomObject>
    <description>A Section is an area within Pages and Templates which include Subsections.</description>
    <fields>
        <fullName>FieloCMS__CSSClasses__c</fullName>
        <description>Keywords that can be included in the HTML class attribute. Keywords must be separated by blank spaces.</description>
        <label>CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ElementType__c</fullName>
        <description>Type of section element (Header, Main, Footer, Div, Article, Aside).</description>
        <label>Element type</label>
        <picklist>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Div</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__IsBody__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the section is the one that contains the body por the page/template</description>
        <inlineHelpText>This field is checked when the section is the one that contains the body por the page/template</inlineHelpText>
        <label>Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Order__c</fullName>
        <description>Section order number.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Page/Template where the Section belongs to.</description>
        <label>Page</label>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Section where a subsection belongs to.</description>
        <label>Parent</label>
        <referenceTo>FieloCMS__Section__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Width__c</fullName>
        <description>Section/subsection size.</description>
        <label>Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCMS__ErrorInvalidElementTypeForChild</fullName>
        <active>true</active>
        <description>The Element Type for a child Section cannot be Header, Main or Footer.</description>
        <errorConditionFormula>Parent__r.Page__r.RecordType.DeveloperName = &apos;Template&apos; &amp;&amp;
NOT(ISNULL(Parent__c)) &amp;&amp;
((ISPICKVAL(ElementType__c, &apos;Header&apos;)) ||
(ISPICKVAL(ElementType__c, &apos;Footer&apos;)) ||
(ISPICKVAL(ElementType__c, &apos;Main&apos;)))</errorConditionFormula>
        <errorDisplayField>FieloCMS__ElementType__c</errorDisplayField>
        <errorMessage>The Element Type for a child Section cannot be Header, Main or Footer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCMS__ErrorInvalidElementTypeForPage</fullName>
        <active>true</active>
        <description>This Element Type is not valid for a Page.</description>
        <errorConditionFormula>(Page__r.RecordType.DeveloperName = &apos;Page&apos; ||
Parent__r.Page__r.RecordType.DeveloperName = &apos;Page&apos;)
&amp;&amp;
(ISPICKVAL(ElementType__c, &apos;Header&apos;) ||
ISPICKVAL(ElementType__c, &apos;Main&apos;) ||
ISPICKVAL(ElementType__c, &apos;Footer&apos;))</errorConditionFormula>
        <errorDisplayField>FieloCMS__ElementType__c</errorDisplayField>
        <errorMessage>This Element Type is not valid for a Page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCMS__ErrorInvalidElementTypeForParent</fullName>
        <active>true</active>
        <description>The Element Type for a parent Section must be Header, Main or Footer.</description>
        <errorConditionFormula>Page__r.RecordType.DeveloperName = &apos;Template&apos; &amp;&amp;
ISNULL(Parent__c) &amp;&amp;
NOT(ISPICKVAL(ElementType__c, &apos;Header&apos;)) &amp;&amp;
NOT(ISPICKVAL(ElementType__c, &apos;Footer&apos;)) &amp;&amp;
NOT(ISPICKVAL(ElementType__c, &apos;Main&apos;))</errorConditionFormula>
        <errorDisplayField>ElementType__c</errorDisplayField>
        <errorMessage>The Element Type for a parent Section must be Header, Main or Footer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCMS__ErrorThirdLevelSection</fullName>
        <active>true</active>
        <description>A Section cannot be a child of another child section.</description>
        <errorConditionFormula>IF(NOT(ISBLANK(FieloCMS__Parent__c)), NOT(ISBLANK(FieloCMS__Parent__r.FieloCMS__Parent__c)), false)</errorConditionFormula>
        <errorDisplayField>FieloCMS__Parent__c</errorDisplayField>
        <errorMessage>A Section cannot be a child of another child section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCMS__OrphanSections</fullName>
        <active>true</active>
        <description>The sections/subsections must be children of a Page/Section.</description>
        <errorConditionFormula>ISBLANK(FieloCMS__Parent__c) &amp;&amp; ISBLANK( FieloCMS__Page__c )</errorConditionFormula>
        <errorMessage>The sections/subsections must be children of a Page/Section.</errorMessage>
    </validationRules>
</CustomObject>